AC_INIT([ccalc], [1.0])                                                                                                                 
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([ccalc.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Common compiler flags
CFLAGS="-Wall -O2"

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h termios.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
